--- a/html/contactus.html
+++ b/html/contactus.html
@@ -8,15 +8,15 @@
     <body>
         <div class="displayContent">
         <h1 class="title">Our Office Location</h1>
-        <p class="content">Bharat Bhavan A12,Pune,Mharashtra</p>
+        <p class="content"><b>Bharat Bhavan A12,Pune,Mharashtra</b></p>
         <h1 class="title">Mobile & Whatsapp Number</h1>
-        <p class="content">+91-9486380736 / +91-6345600123</p>
+        <p class="content"><b>+91-9486380736 / +91-6345600123</b></p>
         <h1 class="title">Office Hours</h1>
-        <p class="content">09:30am - 05:00pm | monday-saturday</p>
+        <p class="content"><b>09:30am - 05:00pm | monday-saturday</b></p>
         <h1 class="title">E-mail id</h1>
-        <p class="content"> iecmktg@gmail.com </p>
+        <p class="content"><b> iecmktg@gmail.com </b></p>
         <h1 class="title">Website</h1>
-        <p class="content"><a>www.indianelectric.com</a></p>
+        <p class="content"><a><b>www.indianelectric.com</b></a></p>
         </div>
     </body>
 </html>
