--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,14 @@
         
     </head>
     <body>
-        
+        <div class="aboutContent">
+            <input type="text" placeholder="Your Username" class="inputArea">
+            <input type="password" placeholder="Your Password" class="inputArea">
+            <div class="buttonArea">
+            <input type="submit" class="button">
+            <input type="button" value="Reset" class="button">
+
+        </div>
     </body>
 
 </html>
