--- a/html/contactus.html
+++ b/html/contactus.html
@@ -16,7 +16,7 @@
         <h1 class="title">E-mail id</h1>
         <p class="content"><b> iecmktg@gmail.com </b></p>
         <h1 class="title">Website</h1>
-        <p class="content"><a><b>www.indianelectric.com</b></a></p>
+        <p class="content"><a>https://powermin.gov.in/</a></p>
         </div>
     </body>
 </html>
