--- a/html/project.html
+++ b/html/project.html
@@ -15,7 +15,7 @@
             <h1 class="tit"><b><pre>                Indian Electricity Board (IEB)</pre></b></h1>
             <div class="mainButton">
                <a href="../html/home.html"><input type="button" value="Home" class="button"></a>
-               <a href="../html/"><input type="button"  value="About" class="button"></a>
+               <a href="../html/about.html"><input type="button"  value="About" class="button"></a>
                <a href="../html/contactus.html"><input type="button" value="Contact Us" class="button"></a>
             </div>
          </div>
