added some more columns
added extra images

--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
         <div class="displayContent">
            <a href="../html/resposibilities.html"><input type="button"  value="Resopsibilities" class="button"></a>
             <a href="../html/structure.html"><input type="button"  value="Structure of ministry" class="button"></a>
-            <a href=""><input type="button"  value="Channel of submission" class="button"></a>
+            <a href="../html/channel.html"><input type="button"  value="Channel of submission" class="button"></a>
             
         </div>
         
