--- a/html/resposibilities.html
+++ b/html/resposibilities.html
@@ -13,8 +13,8 @@ All matters relating to hydro-electric power (except small/mini/micro hydel proj
 Research, development and technical assistance relating to hydro-electric and thermal power, transmission system network and distribution systems in the States/UTs;
 Administration of the Electricity Act, 2003, ( 36 of 2003) , the Energy Conservation Act , 2001 (52 of 2001 ), the Damodar Valley Corporation Act,1948 ( 14 of 1948) and Bhakra Beas Management Board as provided in the Punjab Reorganisation Act,1966 (31 of 1966 ).
 All matters relating to Central Electricity Authority, Central Electricity Board and Central Electricity Regulatory Commission;<br>
-(a) Rural Electrification;<br>
-(b) Power schemes and issues relating to power supply/development schemes/ programmes/decentralized and distributed generation in the States and Union Territories;
+a. Rural Electrification;<br>
+b. Power schemes and issues relating to power supply/development schemes/ programmes/decentralized and distributed generation in the States and Union Territories;
  
 Matters relating to the following Undertakings/Organizations:-a. The Damodar Valley Corporation;<br>
 b. The Bhakra Beas Management Board (except matters relating to irrigation<br>
