--- a/html/channel.html
+++ b/html/channel.html
@@ -23,7 +23,7 @@
 Any other matters as deemed necessary by the Ministry or as directed by the Hon'ble Minister</b><br>
 
         </p>
-        <img src="image.png" alt="" width="500" height="333">
+        <img src="../image1.png" alt="" width="224" height="290">
        
     </body>
 </html>
