--- a/html/resposibilities.html
+++ b/html/resposibilities.html
@@ -15,20 +15,20 @@ Administration of the Electricity Act, 2003, ( 36 of 2003) , the Energy Conserva
 All matters relating to Central Electricity Authority, Central Electricity Board and Central Electricity Regulatory Commission;<br>
 a. Rural Electrification;<br>
 b. Power schemes and issues relating to power supply/development schemes/ programmes/decentralized and distributed generation in the States and Union Territories;
- 
-Matters relating to the following Undertakings/Organizations:-a. The Damodar Valley Corporation;<br>
-b. The Bhakra Beas Management Board (except matters relating to irrigation<br>
-c. National Thermal Power Corporation Limited;<br>
-e. National Hydro-electric Power Corporation Limited;<br>
-f. Rural Electrification Corporation Limited;<br>
-g. North Eastern Electric Power Corporation Limited;<br>
-h. Power Grid Corporation of India Limited;<br>
-i. Power Finance Corporation Limited;<br>
-j. Tehri Hydro Development Corporation;<br>
-k. Satluj Jal Vidyut Nigam Ltd.;<br>
-l. Central Power Research Institute;<br>
-m. National Power Training Institute;<br>
-n. Bureau of Energy Efficiency;</b><br>
+c.Matters relating to the following Undertakings/Organizations:-a. The Damodar Valley Corporation;<br>
+d. The Bhakra Beas Management Board (except matters relating to irrigation<br>
+e. National Thermal Power Corporation Limited;<br>
+f. National Hydro-electric Power Corporation Limited;<br>
+g. Rural Electrification Corporation Limited;<br>
+h. North Eastern Electric Power Corporation Limited;<br>
+i. Power Grid Corporation of India Limited;<br>
+j. Power Finance Corporation Limited;<br>
+k. Tehri Hydro Development Corporation;<br>
+l. Satluj Jal Vidyut Nigam Ltd.;<br>
+m. Central Power Research Institute;<br>
+n. National Power Training Institute;<br>
+o. Bureau of Energy Efficiency;</b><br> 
+
  
 <h2>All matters concerning energy conservation and energy efficiency pertaining to Power Sector.</h2>
             </p>
